# LaPael

./: .gitignore  README.md  convert_fsdp_checkpoint.sh  pyproject.toml  requirements.txt
Analysis/: get_lm_embeddings.py  utils.py
Data_Preprocessing/: README.md
Data_Preprocessing/oracle_textbook/squad_test_short/: processed_sentences.json  raw_withanswer_gpt-4-turbo.json
Data_Preprocessing/oracle_textbook/squad_train_short/: entities_gpt-3.5-turbo.json  processed_sentences.json  raw_withanswer_gpt-4-turbo.json
Evaluator/: eval_utils.py  run_contextqa.py
Evaluator/ContextQA/squad_test/: prompt_mistral.txt  prompt_phi.txt  test.json  test.jsonl
Evaluator/ContextQA/squad_train_short/: prompt.txt  test.json  test.jsonl
Knowledge_Generator/: README.md
Knowledge_Generator/openai_outputs/squad_train_short/: paraphrase_medium_suffix_c256_gen10_gpt-3.5-turbo.json
configs/: perturb_base.yaml
custom_datasets/: document_dataset.py  perturbation_dataset.py
scripts/: allinone_short.sh  finetune_perturbation.sh  train_lapael.sh
src/llama_recipes/: finetuning.py
src/llama_recipes/configs/: __init__.py  datasets.py  perturb.py  training.py
src/llama_recipes/data/: sampler.py
src/llama_recipes/datasets/: alpaca_dataset.py  conversation_utils.py
src/llama_recipes/inference/: checkpoint_converter_fsdp_hf.py  model_utils.py
src/llama_recipes/model_checkpointing/: __init__.py  checkpoint_handler.py
src/llama_recipes/policies/: wrapping.py
src/llama_recipes/utils/: fsdp_utils.py  model_adversarial_utils.py  model_perturbation_utils.py  model_utils.py  (+4 more)
(+2 files in other folders)
